@@ -358,6 +358,8 @@ void Preferences::reset() {
 
 	check_channels_conf_on_startup = true;
 	initial_tv_deinterlace = MediaSettings::Yadif_1;
+	last_dvb_channel = "";
+	last_tv_channel = "";
 
 
     /* ***********
@@ -746,6 +748,8 @@ void Preferences::save() {
 	set->beginGroup( "tv");
 	set->setValue("check_channels_conf_on_startup", check_channels_conf_on_startup);
 	set->setValue("initial_tv_deinterlace", initial_tv_deinterlace);
+	set->setValue("last_dvb_channel", last_dvb_channel);
+	set->setValue("last_tv_channel", last_tv_channel);
 	set->endGroup(); // tv
 
     /* ***********
@@ -1152,6 +1156,8 @@ void Preferences::load() {
 	set->beginGroup( "tv");
 	check_channels_conf_on_startup = set->value("check_channels_conf_on_startup", check_channels_conf_on_startup).toBool();
 	initial_tv_deinterlace = set->value("initial_tv_deinterlace", initial_tv_deinterlace).toInt();
+	last_dvb_channel = set->value("last_dvb_channel", last_dvb_channel).toString();
+	last_tv_channel = set->value("last_tv_channel", last_tv_channel).toString();
 	set->endGroup(); // tv
 
 
